syntax = "proto3";

package co.topl.bridge.consensus.service;

message Empty {

}

service StateMachineService {
  rpc ExecuteRequest(StateMachineRequest) returns (Empty);
}


service ResponseService {
  rpc DeliverResponse(StateMachineReply) returns (Empty);
}

message StateMachineRequest {
  uint64 timestamp = 1;
  uint32  clientNumber = 2;
  bytes signature = 3;
  oneof operation {
    StartSessionOperation startSession = 4;
    MintingStatusOperation mintingStatus = 5;
  }
  
}

message StateMachineReply {
  uint64 viewNumber = 1; // current view number
  uint64 timestamp = 2; // timestamp of the request
  uint32 replicaNumber = 3; // replica number of the request
  bytes signature = 4; // signature of the request
  oneof result {
    StartSessionRes startSession = 5;
    MintingStatusRes mintingStatus = 6;
    SessionNotFoundRes sessionNotFound = 7;
    InvalidInputRes invalidInput = 8;
  }
}

message StartSessionOperation {
   string pkey = 1;
   string sha256= 2;
}

message StartSessionRes {
  string sessionId = 1;
  string script = 2;
  string escrowAddress = 3;
  string descriptor = 4;
  uint64 minHeight = 5;
  uint64 maxHeight = 6;
}

message SessionNotFoundRes {
  string sessionId = 1;
}

message InvalidInputRes {
  string errorMessage = 1;
}

message MintingStatusOperation {
  string sessionId = 1;
}

message MintingStatusRes {
  string sessionId = 1;
  string mintingStatus = 2;
  string address = 3;
  string redeemScript = 4;
}